# Aries

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md
cmake/: clangformat.cmake  common.cmake  compiler.cmake  platform.cmake  setup.cmake  summary.cmake  target.cmake
dependency/: CMakeLists.txt
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/include/juglans/core/: CMakeLists.txt  filesystem.hpp  hand.hpp  jvm.hpp  log.hpp  profiler.hpp  time.hpp  transform.hpp  types.hpp
modules/core/src/: CMakeLists.txt  filesystem.cpp  jvm.cpp  log.cpp  profiler.cpp  time.cpp
modules/core/unit/: CMakeLists.txt  transform_test.cpp
modules/interface/: CMakeLists.txt
modules/interface/include/juglans/: CMakeLists.txt  interface.hpp
modules/interface/internal/: CMakeLists.txt  interface.hpp
modules/interface/src/: CMakeLists.txt  interface.cpp
tools/: CMakeLists.txt
tools/common/: CMakeLists.txt  common.cpp  common.hpp
tools/interface_demo/: CMakeLists.txt  demo.cpp
